cleanup- autoformat and organize imports on every file in the commit

--- a/templates/cars/car_list.html
+++ b/templates/cars/car_list.html
@@ -18,7 +18,8 @@
                     <h2 class="list-title">Lista Samochodów:</h2>
                 </div>
                 <div class="col-md-4">
-                    <a href="{% url 'cars:car_create' %}" class="btn btn-outline-geo pull-right" role="button">Dodaj Samochód</a>
+                    <a href="{% url 'cars:car_create' %}" class="btn btn-outline-geo pull-right" role="button">Dodaj
+                        Samochód</a>
                 </div>
             </div>
 
@@ -33,7 +34,7 @@
                             <p><b>Pojemność silnika:</b> {{ car.engine_volume }}</p>
                             <p><b>Typ nadwozia:</b> {{ car.body_type }}</p>
                             <p><b>Numer ubezpieczenia:</b> {{ car.insurance_number }}</p>
-                            <p><b>Dostępność:</b> {{ car.is_available|yesno:"Dostępny,Niedostępny"}}</p>
+                            <p><b>Dostępność:</b> {{ car.is_available|yesno:"Dostępny,Niedostępny" }}</p>
                             <p><b>Stan:</b> {{ car.need_repair }}</p>
                             <p><b>Ostatnio przesłane współrzędne:</b> {{ car.last_location }}</p>
                         </div>
