--- a/templates/regions/regions.html
+++ b/templates/regions/regions.html
@@ -33,17 +33,24 @@
 			
 			
 			<!-- -->
-			var rupdate = {{rupdate}};
-			var nlat = {{nlat}};
-			var nlon = {{nlon}};
-			var slat = {{slat}};
-			var slon = {{slon}};
-			for (i = 0; i < nlat.length; i++) {
-				//alert(rupdate[i]);
+			 var regio = [
+				{% for region in all_regions %}
+					{% if not forloop.first %},{% endif %}
+					{
+						is_updated: "{{ region.is_updated }}",
+						north_west_lat: "{{ region.north_west__latitude }}",
+						north_west_lon: "{{ region.north_west__longitude }}",
+						south_east_lat: "{{ region.south_east__latitude }}",
+						south_east_lon: "{{ region.south_east__longitude}}"
+					}
+				{% endfor %}
+				]
+				
+			for (i = 0; i < regio.length; i++) {
 				var c;
-				if (parseInt(rupdate[i])==0){
+				if (regio[i].is_updated=='False'){
 					c = '#FF0000';
-				}else if (parseInt(rupdate[i])==1){
+				}else if (regio[i].is_updated=='True'){
 					c = '#00FF00';
 				}
 				var rectangle = new google.maps.Rectangle({
@@ -52,10 +59,10 @@
 					  fillOpacity: 0.35,
 					  map: map1,
 					  bounds: {
-						north: parseFloat(nlat[i]),
-						south: parseFloat(slat[i]),
-						east: parseFloat(slon[i]),
-						west: parseFloat(nlon[i])
+						north: parseFloat(regio[i].north_west_lat),
+						south: parseFloat(regio[i].south_east_lat),
+						east: parseFloat(regio[i].south_east_lon),
+						west: parseFloat(regio[i].north_west_lon)
 					  }
 				});
 				rectangle.addListener('rightclick', function(event){
