--- a/templates/regions/regions.html
+++ b/templates/regions/regions.html
@@ -21,6 +21,7 @@
             <div id="map1"></div>
         </div>
     </div>
+	{% csrf_token %}
     <script type="text/javascript">
         function myMap() {
             var mapOptions = {
@@ -33,10 +34,11 @@
 			
 			
 			<!-- -->
-			 var regio = [
+			var allRegions = [
 				{% for region in all_regions %}
 					{% if not forloop.first %},{% endif %}
 					{
+						id: "{{ region.id }}",
 						is_updated: "{{ region.is_updated }}",
 						north_west_lat: "{{ region.north_west__latitude }}",
 						north_west_lon: "{{ region.north_west__longitude }}",
@@ -44,34 +46,38 @@
 						south_east_lon: "{{ region.south_east__longitude}}"
 					}
 				{% endfor %}
-				]
-				
-			for (i = 0; i < regio.length; i++) {
-				var c;
-				if (regio[i].is_updated=='False'){
-					c = '#FF0000';
-				}else if (regio[i].is_updated=='True'){
-					c = '#00FF00';
+			];
+			
+			for (i = 0; i < allRegions.length; i++) {
+				var color;
+				if (allRegions[i].is_updated=='False'){
+					color = '#FF0000';
+				}else if (allRegions[i].is_updated=='True'){
+					color = '#00FF00';
 				}
 				var rectangle = new google.maps.Rectangle({
 					  strokeWeight: 2,
-					  fillColor: c,
+					  fillColor: color,
 					  fillOpacity: 0.35,
 					  map: map1,
 					  bounds: {
-						north: parseFloat(regio[i].north_west_lat),
-						south: parseFloat(regio[i].south_east_lat),
-						east: parseFloat(regio[i].south_east_lon),
-						west: parseFloat(regio[i].north_west_lon)
-					  }
+						north: parseFloat(allRegions[i].north_west_lat),
+						south: parseFloat(allRegions[i].south_east_lat),
+						east: parseFloat(allRegions[i].south_east_lon),
+						west: parseFloat(allRegions[i].north_west_lon)
+					  },
+					  //region id is saved in zIndex
+					  zIndex : parseInt(allRegions[i].id)
 				});
 				rectangle.addListener('rightclick', function(event){
-					var r = this;
+					var thisRectangle = this;
+					var previouscolor = thisRectangle.fillColor;
+					thisRectangle.setOptions({fillColor: '#000000'});
 					var projection = map1.getProjection() ;
 					$('.contextmenu').remove();
 					var contextmenuDir = document.createElement("div");
 					contextmenuDir.className  = 'contextmenu';
-					contextmenuDir.innerHTML = '<a id="menu1"><div class="context">Zaznacz obszar do aktualizacji<\/div><\/a>'
+					contextmenuDir.innerHTML = '<a id="menu1" class="zaznaczDoAktualizacji"><div class="context">Zaznacz obszar do aktualizacji<\/div><\/a>'
                     + '<a href="./regions/add/1184" id="menu2"><div class="context">Przydziel zasoby do obszaru<\/div><\/a>';
 				    /*TODO: Do zmiany kiedy regiony zostaną wprowadzone do bazy danych przez autora widoku*/
 					$(map1.getDiv()).append(contextmenuDir);
@@ -79,16 +85,32 @@
 					contextmenuDir.style.visibility = "visible";
 					map1.addListener('idle', function(event){
 						contextmenuDir.style.visibility = "hidden";
+						thisRectangle.setOptions({fillColor: previouscolor});
 					});
 					
-					/*document.getElementById("menu1").addEventListener ("click", function() {
-						rect(r);
+					$('.zaznaczDoAktualizacji').click(function(){
+						//console.log(thisRectangle.zIndex);
+						var region_id = thisRectangle.zIndex;
+						var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
+						function csrfSafeMethod(method) {
+							// these HTTP methods do not require CSRF protection
+							return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+						}
+						$.ajaxSetup({
+							beforeSend: function(xhr, settings) {
+								if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+									xhr.setRequestHeader("X-CSRFToken", csrftoken);
+								}
+							}
+						});
+						$.ajax({ 
+							url: '/',
+							data: {"region": region_id},
+							type: 'post'
+						});
+						thisRectangle.setOptions({fillColor: '#FF0000'});
 					});
-		
-					function rect(rectangle){
-						rectangle.setOptions({fillColor: '#FF0000'});
-					}
-					*/
+					
 				});
 			
 			}
