--- a/templates/regions/regions.html
+++ b/templates/regions/regions.html
@@ -11,6 +11,29 @@
                     {% endfor %}
                 </div>
             {% endif %}
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <h4 style="text-align: center">Postęp aktualizacji obszarów:</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"
+                             aria-valuenow="60"
+                             aria-valuemin="0"
+                             aria-valuemax="100"
+                             style="width: 60%;">
+                        </div>
+                        <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar"
+                             aria-valuenow="40"
+                             aria-valuemin="0"
+                             aria-valuemax="100"
+                             style="width: 40%;">
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!--
                         <div class="buttons-panel">
                             <a type="button" class="btn btn-default" name="actualUpdates" href="/regions/actualUpdates">Wyświetl aktualnie przeprowadzane aktualizacje</a>
