--- a/templates/regions/regions.html
+++ b/templates/regions/regions.html
@@ -21,16 +21,16 @@
                 <div class="col-md-6 col-md-offset-3">
                     <div class="progress">
                         <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"
-                             aria-valuenow="60"
+                             aria-valuenow="{{updated_percentage}}"
                              aria-valuemin="0"
                              aria-valuemax="100"
-                             style="width: 60%;">
+                             style="width: {{updated_percentage}}%;">
                         </div>
                         <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar"
-                             aria-valuenow="40"
+                             aria-valuenow="{{outdated_percentage}}"
                              aria-valuemin="0"
                              aria-valuemax="100"
-                             style="width: 40%;">
+                             style="width: {{outdated_percentage}}%;">
                         </div>
                     </div>
                 </div>
