adjusting views to the test scenarios

--- a/templates/regions/edit_driver_to_region.html
+++ b/templates/regions/edit_driver_to_region.html
@@ -6,7 +6,7 @@
 
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
-                    <h2>Edytuj przydzielone zasoby do wybranego obszaru</h2>
+                    <h2>Przydziel zasoby do wybranego obszaru</h2>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 container-resources">
                     <form method="post">
